#253 Modify maven build ...